ex05/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    type: frontend
  name: nginx-frontend
  namespace: ex5
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    type: backend
  name: nginx-backend
  namespace: ex5
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
